# Microprocessor

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: instruction_set.tex  single_cycle_computer.tex
include/architecture/: isa.h  logger.h
include/assembler/: encoder.h  lexer.h  logger.h  parser.h
include/simulator/: cli.h  memory.h  processor.h  registers.h
include/structures/: list.h
programs/: bubblesort.S  fibonacci.S
src/architecture/: isa.c  logger.c
src/assembler/: assembler.c  encoder.c  lexer.c  parser.c
src/simulator/: cli.c  memory.c  processor.c  registers.c  simulator.c
src/structures/: list.c
